2003-09-03  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Correct the about box version number.

2003-08-23  Irene Ryan <irene.ryan@sun.com>

	* help/C/mailcheck.xml, mailcheck-C.omf, l10n.txt: 
	  Updates to the help for the GNOME 2.4 release.

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  HIGify widget padding between the vbox and 
	action area of the dialogs.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.

2003-07-18 Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* mailcheck.c: Allow only numeric values to time spin button.
	Fixes bug#117689

2003-07-14 Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* mailcheck.c: Destroy the corresponding password prompt
	dialog when applet is removed. Fixes bug #117041

Mon Jul 07 11:24:18 2003  George Lebl <jirka@5z.com>

	* mailcheck.c: make hig_dialog_new static

Mon Jul 07 11:12:45 2003  George Lebl <jirka@5z.com>

	* mailcheck.c: respect key-writability in the preferences dialog

	* mailcheck.c: HIGify the error boxes with some code stolen from
	  gsearchtool

2003-06-26  Kevin Vandersloot

	* mailcheck.c: wrap text so it shows better on vertical panels. Kinda fixes bug #99794

2003-06-16  Kevin Vandersloot

	* mailcheck.c: keybinding for update and bind space/enter to double click stuff

2003-06-07  Kevin Vandersloot

	* mailcheck.c: expand for Fitt's law and put in an alignment

2003-06-03  Kevin Vandersloot

	* *.schemas.in: Fix typo. Fixes bug #114300

2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Convert "when clicked" to "when double clicked".
	
2003-05-29  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Improve layout of recent changes to preference dialog.
	
2003-05-28  Shailesh Mittal <shailesh.mittal@wipro.com>

 	* popcheck.c:
 	(have_ipv6): Added to check for runtime IPv6 support.
 	(get_server_port): Modified to pick the port out of IPv6 formatted
 	host-port string.