@@ -1,3 +1,7 @@
+Mon Sep 15 14:23:05 2003  George Lebl <jirka@5z.com>
+
+	* mailcheck.c, popcheck.c: get rid of compiler warnings
+
 2003-09-03  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* mailcheck.c:  Correct the about box version number.
